[tool.poetry]
name = "dynmap_api"
version = "0.1.0"
description = "A unified Python API wrapper for Dynmap"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.7.2"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pydoctor = "^20.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
